--- a/ColorfulBox/ColorfulBox/Views/HomePage.xaml
+++ b/ColorfulBox/ColorfulBox/Views/HomePage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="ColorfulBox.Views.HomePage"
+    x:Class="ColorfulBox.HomePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ColorfulBox.Views"
+    xmlns:local="using:ColorfulBox"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
@@ -11,7 +11,266 @@
     d:DesignHeight="300"
     d:DesignWidth="600"
     mc:Ignorable="d">
+    <Page.Resources>
+        <LinearGradientBrush x:Key="HueBrush"
+                             StartPoint="0,0.5"
+                             EndPoint="1,0.5">
+            <GradientStop Color="#FFFF0000"
+                              Offset="0" />
+            <GradientStop Color="#FFFF2A00"
+                              Offset="0.0277777777777778" />
+            <GradientStop Color="#FFFF5400"
+                              Offset="0.0555555555555556" />
+            <GradientStop Color="#FFFF7F00"
+                              Offset="0.0833333333333333" />
+            <GradientStop Color="#FFFFAA00"
+                              Offset="0.111111111111111" />
+            <GradientStop Color="#FFFFD400"
+                              Offset="0.138888888888889" />
+            <GradientStop Color="#FFFFFF00"
+                              Offset="0.166666666666667" />
+            <GradientStop Color="#FFD4FF00"
+                              Offset="0.194444444444444" />
+            <GradientStop Color="#FFAAFF00"
+                              Offset="0.222222222222222" />
+            <GradientStop Color="#FF7FFF00"
+                              Offset="0.25" />
+            <GradientStop Color="#FF54FF00"
+                              Offset="0.277777777777778" />
+            <GradientStop Color="#FF2AFF00"
+                              Offset="0.305555555555556" />
+            <GradientStop Color="#FF00FF00"
+                              Offset="0.333333333333333" />
+            <GradientStop Color="#FF00FF2A"
+                              Offset="0.361111111111111" />
+            <GradientStop Color="#FF00FF55"
+                              Offset="0.388888888888889" />
+            <GradientStop Color="#FF00FF7F"
+                              Offset="0.416666666666667" />
+            <GradientStop Color="#FF00FFA9"
+                              Offset="0.444444444444444" />
+            <GradientStop Color="#FF00FFD4"
+                              Offset="0.472222222222222" />
+            <GradientStop Color="#FF00FFFF"
+                              Offset="0.5" />
+            <GradientStop Color="#FF00D4FF"
+                              Offset="0.527777777777778" />
+            <GradientStop Color="#FF00A9FF"
+                              Offset="0.555555555555556" />
+            <GradientStop Color="#FF007FFF"
+                              Offset="0.583333333333333" />
+            <GradientStop Color="#FF0055FF"
+                              Offset="0.611111111111111" />
+            <GradientStop Color="#FF002AFF"
+                              Offset="0.638888888888889" />
+            <GradientStop Color="#FF0000FF"
+                              Offset="0.666666666666667" />
+            <GradientStop Color="#FF2A00FF"
+                              Offset="0.694444444444444" />
+            <GradientStop Color="#FF5400FF"
+                              Offset="0.722222222222222" />
+            <GradientStop Color="#FF7F00FF"
+                              Offset="0.75" />
+            <GradientStop Color="#FFAA00FF"
+                              Offset="0.777777777777778" />
+            <GradientStop Color="#FFD400FF"
+                              Offset="0.805555555555556" />
+            <GradientStop Color="#FFFF00FF"
+                              Offset="0.833333333333333" />
+            <GradientStop Color="#FFFF00D4"
+                              Offset="0.861111111111111" />
+            <GradientStop Color="#FFFF00AA"
+                              Offset="0.888888888888889" />
+            <GradientStop Color="#FFFF007F"
+                              Offset="0.916666666666667" />
+            <GradientStop Color="#FFFF0054"
+                              Offset="0.944444444444444" />
+            <GradientStop Color="#FFFF002A"
+                              Offset="0.972222222222222" />
+            <GradientStop Color="#FFFF0004"
+                              Offset="1" />
+        </LinearGradientBrush>
+        <local:ColorPointCollection x:Key="ColorPoints">
+            <local:ColorPoint InitializationColor="#FF00EE82" />
+            <local:ColorPoint InitializationColor="Red" />
+            <local:ColorPoint InitializationColor="Blue"
+                              IsPrimary="True" />
+            <local:ColorPoint InitializationColor="Yellow" />
+            <local:ColorPoint InitializationColor="#FF00D4" />
+        </local:ColorPointCollection>
+        <DataTemplate x:Key="ArgbModelTemplate" x:DataType="local:ColorPoint">
+            <Grid>
+                <Grid.Resources>
+                    <local:ArgbColorBridge  x:Key="ArgbColorBridge"
+                                            Color="{Binding HsvColor,Mode=TwoWay,Converter={StaticResource HsvToColorConverter}}" />
+                    <local:ArgbConverter x:Key="RedConverter"
+                                         Model="Red" />
+                    <local:ArgbConverter x:Key="GreenConverter"
+                                         Model="Green" />
+                    <local:ArgbConverter x:Key="BlueConverter"
+                                         Model="Blue" />
+                </Grid.Resources>
+                <StackPanel >
+                    <Grid Margin="0,7">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <local:ColorGradient Width="200"
+                                             Margin=" 5,0"
+                                             Minimum="0"
+                                             Maximum="255"
+                                             Color="{Binding HsvColor,Converter={StaticResource HsvToColorConverter}}"
+                                             Value="{Binding Source={StaticResource ArgbColorBridge},Path=R,Mode=TwoWay}"
+                                             ColorConverter="{StaticResource RedConverter}" 
+                                            />
 
+                        <TextBlock Text="R:"
+                                   Grid.Column="1"
+                               />
+                        <TextBlock Text="{Binding Source={StaticResource ArgbColorBridge},Path=R,Mode=TwoWay}"
+                                 
+                                   Width="30"
+                                   Margin="3,0,0,0"
+                                   Grid.Column="2" />
+                    </Grid>
+                    <Grid Margin="0,7">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <local:ColorGradient Width="200"
+                                             Minimum="0"
+                                             Maximum="255"
+                                             Color="{Binding HsvColor,Converter={StaticResource HsvToColorConverter}}"
+                                             Value="{Binding Source={StaticResource ArgbColorBridge},Path=G,Mode=TwoWay}"
+                                             ColorConverter="{StaticResource GreenConverter}" />
+
+                        <TextBlock Text="G:"
+                                   Grid.Column="1"
+                                />
+                        <TextBlock Text="{Binding Source={StaticResource ArgbColorBridge},Path=G,Mode=TwoWay}"
+                                
+                                   Width="30"
+                                   Margin="3,0,0,0"
+                                   Grid.Column="2" />
+                    </Grid>
+                    <Grid Margin="0,7">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <local:ColorGradient Width="200"
+                                             Minimum="0"
+                                             Maximum="255"
+                                             Color="{Binding HsvColor,Converter={StaticResource HsvToColorConverter}}"
+                                             Value="{Binding Source={StaticResource ArgbColorBridge},Path=B,Mode=TwoWay}"
+                                             ColorConverter="{StaticResource BlueConverter}" />
+
+                        <TextBlock Text="B:"
+                                   Grid.Column="1"
+                                 />
+                        <TextBlock Text="{Binding Source={StaticResource ArgbColorBridge},Path=B,Mode=TwoWay}"
+                                   
+                                   Width="30"
+                                   Margin="3,0,0,0"
+                                   Grid.Column="2" />
+                    </Grid>
+                </StackPanel>
+            </Grid>
+        </DataTemplate>
+        <DataTemplate x:Key="HsvModelTemplate" x:DataType="local:ColorPoint">
+            <Grid>
+                <Grid.Resources>
+                    <local:HsvColorBridge  x:Key="HsvColorBridge"
+                                            HsvColor="{Binding HsvColor,Mode=TwoWay}" />
+                    <local:HsvConverter x:Key="HueConverter"
+                                         Model="Hue" />
+                    <local:HsvConverter x:Key="SaturationConverter"
+                                         Model="Saturation" />
+                    <local:HsvConverter x:Key="ValueConverter"
+                                         Model="Value" />
+                </Grid.Resources>
+                <StackPanel >
+                    <Grid Margin="0,7">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <local:ColorGradient Width="200"
+                                             Margin=" 5,0"
+                                             Minimum="0"
+                                             Maximum="360"
+                                             Color="{Binding HsvColor,Converter={StaticResource HsvToColorConverter}}"
+                                             Value="{Binding Source={StaticResource HsvColorBridge},Path=H,Mode=TwoWay}"
+                                             ColorConverter="{StaticResource HueConverter}" 
+                                             Background="{StaticResource HueBrush}"/>
+
+                        <TextBlock Text="H:"
+                                   Grid.Column="1"
+                                   />
+                        <TextBlock Text="{Binding Source={StaticResource HsvColorBridge},Path=H,Mode=TwoWay}"
+                                  
+                                   Width="30"
+                                   Margin="3,0,0,0"
+                                   Grid.Column="2" />
+                    </Grid>
+                    <Grid Margin="0,7">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <local:ColorGradient Width="200"
+                                             Minimum="0"
+                                             Maximum="1"
+                                             StepFrequency="0.01" SmallChange="0.01"  LargeChange="0.1"
+                                             Color="{Binding HsvColor,Converter={StaticResource HsvToColorConverter}}"
+                                             Value="{Binding Source={StaticResource HsvColorBridge},Path=S,Mode=TwoWay}"
+                                             ColorConverter="{StaticResource SaturationConverter}"  />
+
+                        <TextBlock Text="S:"
+                                   Grid.Column="1"
+                                    />
+                        <TextBlock Text="{Binding Source={StaticResource HsvColorBridge},Path=S,Mode=TwoWay}"
+                                 
+                                   Width="30"
+                                   Margin="3,0,0,0"
+                                   Grid.Column="2" />
+                    </Grid>
+                    <Grid Margin="0,7">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <local:ColorGradient Width="200"
+                                             Minimum="0"
+                                             Maximum="1"
+                                             StepFrequency="0.01" SmallChange="0.01"  LargeChange="0.1"
+                                             Color="{Binding HsvColor,Converter={StaticResource HsvToColorConverter}}"
+                                             Value="{Binding Source={StaticResource HsvColorBridge},Path=V,Mode=TwoWay}"
+                                             ColorConverter="{StaticResource ValueConverter}" />
+
+                        <TextBlock Text="V:"
+                                   Grid.Column="1"
+                                  />
+                        <TextBlock Text="{Binding Source={StaticResource HsvColorBridge},Path=V,Mode=TwoWay}"
+                                 
+                                   Width="30"
+                                   Margin="3,0,0,0"
+                                   Grid.Column="2" />
+                    </Grid>
+                </StackPanel>
+            </Grid>
+        </DataTemplate>
+
+
+    </Page.Resources>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
