--- a/ColorfulBox/ColorfulBox/Views/MyThemesPage.xaml
+++ b/ColorfulBox/ColorfulBox/Views/MyThemesPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="ColorfulBox.Views.MyThemesPage"
+    x:Class="ColorfulBox.MyThemesPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ColorfulBox.Views"
