--- a/ColorfulBox/ColorfulBox/App.xaml
+++ b/ColorfulBox/ColorfulBox/App.xaml
@@ -3,16 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:ColorfulBox"
              xmlns:localization="using:ColorfulBox.Localization"
-             xmlns:converters="using:Microsoft.Toolkit.Uwp.UI.Converters"
-          RequestedTheme="Dark" >
+             xmlns:converters="using:Microsoft.Toolkit.Uwp.UI.Converters">
     <Application.Resources>
         <local:ColorToBrushConverter x:Key="ColorToBrushConverter" />
-        <local:HsvColorToBrushConverter x:Key="HsvColorToBrushConverter"/>
-        <local:HsvToColorConverter x:Key="HsvToColorConverter"/>
-        <converters:StringFormatConverter x:Key="StringFormatConverter"/>
-        <localization:ApplicationResources x:Key="R"/>
+        <local:HsvColorToBrushConverter x:Key="HsvColorToBrushConverter" />
+        <local:HsvToColorConverter x:Key="HsvToColorConverter" />
+        <converters:StringFormatConverter x:Key="StringFormatConverter" />
+        <localization:ApplicationResources x:Key="R" />
 
-        <SolidColorBrush x:Key="ThemeControlForegroundBaseHighBrush" Color="{ThemeResource SystemBaseHighColor}" />
+        <SolidColorBrush x:Key="ThemeControlForegroundBaseHighBrush"
+                         Color="{ThemeResource SystemBaseHighColor}" />
 
         <x:Double x:Key="LargeFontSize">32</x:Double>
         <x:Double x:Key="MediumFontSize">16</x:Double>
@@ -32,20 +32,32 @@
 
         <!--Small size margins-->
         <Thickness x:Key="EightTopMargin">0, 8, 0, 0</Thickness>
-        <Style x:Key="PageTitleStyle" TargetType="TextBlock">
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="FontWeight" Value="SemiLight"/>
-            <Setter Property="FontSize" Value="{StaticResource LargeFontSize}"/>
-            <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
-            <Setter Property="TextWrapping" Value="NoWrap"/>
-            <Setter Property="Margin" Value="{StaticResource PageTitleMargin}"/>
+        <Style x:Key="PageTitleStyle"
+               TargetType="TextBlock">
+            <Setter Property="VerticalAlignment"
+                    Value="Center" />
+            <Setter Property="FontWeight"
+                    Value="SemiLight" />
+            <Setter Property="FontSize"
+                    Value="{StaticResource LargeFontSize}" />
+            <Setter Property="TextTrimming"
+                    Value="CharacterEllipsis" />
+            <Setter Property="TextWrapping"
+                    Value="NoWrap" />
+            <Setter Property="Margin"
+                    Value="{StaticResource PageTitleMargin}" />
         </Style>
 
-        <Style x:Key="BodyTextStyle" TargetType="TextBlock">
-            <Setter Property="FontWeight" Value="Normal"/>
-            <Setter Property="FontSize" Value="{StaticResource MediumFontSize}"/>
-            <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
-            <Setter Property="TextWrapping" Value="Wrap"/>
+        <Style x:Key="BodyTextStyle"
+               TargetType="TextBlock">
+            <Setter Property="FontWeight"
+                    Value="Normal" />
+            <Setter Property="FontSize"
+                    Value="{StaticResource MediumFontSize}" />
+            <Setter Property="TextTrimming"
+                    Value="CharacterEllipsis" />
+            <Setter Property="TextWrapping"
+                    Value="Wrap" />
         </Style>
     </Application.Resources>
 
