--- a/ColorfulBox/ColorfulBox/Views/SettingsPage.xaml
+++ b/ColorfulBox/ColorfulBox/Views/SettingsPage.xaml
@@ -1,13 +1,97 @@
-﻿<Page
-    x:Class="ColorfulBox.SettingsPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ColorfulBox.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="ColorfulBox.SettingsPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:ColorfulBox.Views"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+          Margin="{StaticResource PageMargin}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0"
+                   Text="Settings"
+                   x:Name="TitleElement"
+                   FontWeight="Light"
+                   Style="{StaticResource PageTitleStyle}" />
+        <StackPanel Grid.Row="1"
+                    x:Name="ContentElement">
+            <StackPanel Margin="{StaticResource SettingsSubheaderMargin}">
+                <TextBlock Text="Personalization"
+                           Style="{StaticResource SubtitleTextBlockStyle}" />
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+                <TextBlock Text="Theme Mode"
+                           Style="{StaticResource BodyTextStyle}" />
 
+                <StackPanel x:Name="ThemePanel"
+                            Margin="{StaticResource EightTopMargin}">
+                    <RadioButton Tag="Light"
+                                 Checked="OnThemeRadioButtonChecked"
+                                 Content="Light" />
+                    <RadioButton Tag="Dark"
+                                 Checked="OnThemeRadioButtonChecked"
+                                 Content="Dark" />
+                    <RadioButton Tag="Default"
+                                 Checked="OnThemeRadioButtonChecked"
+                                 Content="Use system setting" />
+                </StackPanel>
+
+
+
+                <TextBlock Text="Language"
+                           Style="{StaticResource BodyTextStyle}"
+                           Margin="0,12,0,0" />
+
+                <StackPanel x:Name="LanguagePanel"
+                            Margin="{StaticResource EightTopMargin}">
+                    <RadioButton Content="English"
+                                 Checked="OnLanguageRadioButtonChecked"
+                                 Tag="en-US" />
+                    <RadioButton Content="Chinese"
+                                 Checked="OnLanguageRadioButtonChecked"
+                                 Tag="zh-Hans-CN" />
+                    <TextBlock x:Name="NoteElement"
+                               Foreground="#FFF99F00"
+                               Margin="20,10"
+                               Visibility="Collapsed"
+                               Text="{Binding Labels.RestartMessage,Source={StaticResource R}}" />
+                </StackPanel>
+            </StackPanel>
+
+            <StackPanel Margin="{StaticResource SettingsSubheaderMargin}">
+                <TextBlock Text="About"
+                           Style="{StaticResource SubtitleTextBlockStyle}" />
+
+                <StackPanel Margin="{StaticResource EightTopMargin}">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Colorful Box"
+                                   />
+                        <Image Source="Assets/SmallTile.png"
+                               Height="42"
+                               Margin="0,-8,-10,-10" />
+                    </StackPanel>
+
+                    <TextBlock      Margin="{StaticResource EightTopMargin}"
+                                    Text="一个简单的调色板应用" />
+                    
+                    <TextBlock Text="Developer : Dino.C"
+                               Margin="{StaticResource EightTopMargin}" />
+                    <StackPanel Orientation="Horizontal"
+                                Margin="{StaticResource EightTopMargin}">
+                        <TextBlock Text="Version : "
+                                    />
+                        <TextBlock x:Name="VersionElement"
+                                  />
+                    </StackPanel>
+                   
+                    <HyperlinkButton Margin="{StaticResource EightTopMargin}"
+                                     Content="GitHub"
+                                     NavigateUri="https://github.com/DinoChan/Colorful-Box" />
+                </StackPanel>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Page>
